fixed markup not showing right on location info cards

--- a/src/components/LocationInfoCard/location-info-card.module.scss
+++ b/src/components/LocationInfoCard/location-info-card.module.scss
@@ -8,7 +8,7 @@
     }
 }
 
-.back-button{
+a.back-button{
     background:#EE1C25;
     text-transform: uppercase;
     display:inline-block;
@@ -20,6 +20,7 @@
     margin-right:10px;
     margin-bottom:10px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .small-info{
